--- a/restaurant_3.html
+++ b/restaurant_3.html
@@ -56,7 +56,7 @@
                     <div class="entrees">
                         <h3>ENTRÉES</h3>
                         <hr />
-                        <button class="entree_element element_1">
+                        <div class="button entree_element element_1">
                             <div class="titre_element">
                                 <h2>Tartare de poulpe acidulé</h2>
                                 <h3>Aux zestes d'orange</h3>
@@ -69,8 +69,8 @@
                             </div>
 
 
-                        </button>
-                        <button class="entree_element element_2">
+                        </div>
+                        <div class="button entree_element element_2">
                             <div class="titre_element">
                                 <h2>Velouté de légumes d'antan</h2>
                                 <h3>Carotte, panais, topinambour</h3>
@@ -81,8 +81,8 @@
                             <div class="green">
                                 <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
                             </div>
-                        </button>
-                        <button class="entree_element element_3">
+                        </div>
+                        <div class="button entree_element element_3">
                             <div class="titre_element">
                                 <h2>Soupe à l'oignon</h2>
                                 <h3>Revisitée</h3>
@@ -93,12 +93,12 @@
                             <div class="green">
                                 <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
                             </div>
-                        </button>
+                        </div>
                     </div>
                     <div class="plats">
                         <h3>PLATS</h3>
                         <hr />
-                        <button class="plats_element  element_1">
+                        <div class="button plats_element  element_1">
                             <div class="titre_element">
                                 <h2>Coquilles Saint-Jacques</h2>
                                 <h3>Accompagnées d'une purée de panais</h3>
@@ -111,8 +111,8 @@
                             </div>
 
 
-                        </button>
-                        <button class="plats_element element_2">
+                        </div>
+                        <div class="button plats_element element_2">
                             <div class="titre_element">
                                 <h2>Magret de canard</h2>
                                 <h3>Et parmentier de pommes de terre</h3>
@@ -123,8 +123,8 @@
                             <div class="green">
                                 <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
                             </div>
-                        </button>
-                        <button class="plats_element element_3">
+                        </div>
+                        <div class="button plats_element element_3">
                             <div class="titre_element">
                                 <h2>Pigeonneau d’Ille-et-Vilaine</h2>
                                 <h3>Sur son lit de gnocchis aux légumes</h3>
@@ -135,12 +135,12 @@
                             <div class="green">
                                 <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
                             </div>
-                        </button>
+                        </div>
                     </div>
                     <div class="desserts">
                         <h3>DESSERTS</h3>
                         <hr />
-                        <button class="desserts_element  element_1">
+                        <div class="button desserts_element  element_1">
                             <div class="titre_element">
                                 <h2>Pétales de violettes glacés</h2>
                                 <h3>Et purée de noisettes</h3>
@@ -153,8 +153,8 @@
                             </div>
 
 
-                        </button>
-                        <button class="desserts_element element_2">
+                        </div>
+                        <div class="button desserts_element element_2">
                             <div class="titre_element">
                                 <h2>Fondant au chocolat</h2>
                                 <h3>Revisité</h3>
@@ -165,8 +165,8 @@
                             <div class="green">
                                 <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
                             </div>
-                        </button>
-                        <button class="desserts_element element_3">
+                        </div>
+                        <div class="button desserts_element element_3">
                             <div class="titre_element">
                                 <h2>Millefeuille croustillant</h2>
                                 <h3>Myrtilles et pâte d’amande</h3>
@@ -177,13 +177,13 @@
                             <div class="green">
                                 <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
                             </div>
-                        </button>
+                        </div>
                     </div>
                 </div>
             </div>
-            <button id="button_explore" class="button_commander">
+            <div id="button_explore" class="button button_commander">
                 <a href="#">Commander</a>
-            </button>
+            </div>
         </div>
 
 
