--- a/restaurant_1.html
+++ b/restaurant_1.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet"
+        type='text/css'>
+    <link href="/your-path-to-fontawesome/css/fontawesome.css" rel="stylesheet">
+    <link href="/your-path-to-fontawesome/css/brands.css" rel="stylesheet">
+    <link href="/your-path-to-fontawesome/css/solid.css" rel="stylesheet"> -->
+    <script src="https://kit.fontawesome.com/c78fdf2e47.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <title>Ohmyfood</title>
 </head>
@@ -40,8 +47,8 @@
                      149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z">
                             </path>
                             <defs>
-    
-    
+
+
                                 <linearGradient id="grad2" x1="0%" y1="0%" x2="0%" y2="100%">
                                     <stop offset="0%" style="stop-color:#9356DC;stop-opacity:1" />
                                     <stop offset="100%" style="stop-color:#FF79DA ;stop-opacity:1" />
@@ -65,7 +72,7 @@
                                 <h3>25€</h3>
                             </div>
                             <div class="green">
-                                <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
+                                <i class="fas fa-check-circle fa-2x"></i>
                             </div>
 
 
@@ -121,7 +128,7 @@
                                 <h3>35€</h3>
                             </div>
                             <div class="green">
-                                <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
+                                <i class="fas fa-check-circle fa-2x"></i>
                             </div>
                         </div>
                         <div class="button plats_element element_3">
@@ -133,7 +140,7 @@
                                 <h3>44€</h3>
                             </div>
                             <div class="green">
-                                <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
+                                <i class="fas fa-check-circle fa-2x"></i>
                             </div>
                         </div>
                     </div>
@@ -206,7 +213,7 @@
         </div>
 
         <h1>Mentions légales</h1>
-        <a  class="lien_contact" href="mailto:ohmyfood.contact@mail.fr">
+        <a class="lien_contact" href="mailto:ohmyfood.contact@mail.fr">
             <h2>Contact</h2>
         </a>
 
