--- a/restaurant_1.html
+++ b/restaurant_1.html
@@ -225,7 +225,10 @@
                     <div class="conteneur_prix">
                         <h2>25€</h2>
                     </div>
-                    
+                    <div class="green">
+                        <i class="fas fa-check-circle fa-2x"></i>
+                    </div>
+
                 </div>
             </div>
             <div class="conteneur_E_P_D">
@@ -238,7 +241,11 @@
                     <div class="conteneur_prix">
                         <h2>25€</h2>
                     </div>
-                    
+
+                    <div class="green">
+                        <i class="fas fa-check-circle fa-2x"></i>
+                    </div>
+
                 </div>
             </div>
 
