--- a/restaurant_1.html
+++ b/restaurant_1.html
@@ -234,8 +234,8 @@
             <div class="conteneur_E_P_D">
                 <div class="conteneur_E_P_D_niveau_1">
                     <div class="conteneur_titre_et_description">
-                        <h2 class="titre_food">Fricassée d'escargot</h2>
-                        <h3 class="description">Au piment d'Espelette</h3>
+                        <h2 class="titre_food">Oeuf au plat</h2>
+                        <h3 class="description">Assaisonné à la truffe sur lit de caviar</h3>
                     </div>
 
                     <div class="conteneur_prix">
