--- a/restaurant_1.html
+++ b/restaurant_1.html
@@ -231,6 +231,25 @@
 
                 </div>
             </div>
+
+            <div class="conteneur_E_P_D">
+                <div class="conteneur_E_P_D_niveau_1">
+                    <div class="conteneur_titre_et_description">
+                        <h2 class="titre_food">Foie gras de canard mi-cuit</h2>
+                        <h3 class="description">Et ses copeaux de truffe noire</h3>
+                    </div>
+
+                    <div class="conteneur_prix">
+                        <h2>35€</h2>
+                    </div>
+
+                    <div class="green">
+                        <i class="fas fa-check-circle fa-2x"></i>
+                    </div>
+
+                </div>
+            </div>
+
             <div class="conteneur_E_P_D">
                 <div class="conteneur_E_P_D_niveau_1">
                     <div class="conteneur_titre_et_description">
@@ -239,9 +258,122 @@
                     </div>
 
                     <div class="conteneur_prix">
-                        <h2>25€</h2>
+                        <h2>20€</h2>
                     </div>
 
+                    <div class="green">
+                        <i class="fas fa-check-circle fa-2x"></i>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="conteneur_titre_ligne_verte">
+                <h3 class="titre_e_p_d">PLATS</h3>
+                <hr class="ligne_verte" />
+            </div>
+
+            <div class="conteneur_E_P_D">
+                <div class="conteneur_E_P_D_niveau_1">
+                    <div class="conteneur_titre_et_description">
+                        <h2 class="titre_food">Filet de boeuf aux herbes</h2>
+                        <h3 class="description">Accompagné de sa ribambelle de légumes</h3>
+                    </div>
+
+                    <div class="conteneur_prix">
+                        <h2>40€</h2>
+                    </div>
+
+                    <div class="green">
+                        <i class="fas fa-check-circle fa-2x"></i>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="conteneur_E_P_D">
+                <div class="conteneur_E_P_D_niveau_1">
+                    <div class="conteneur_titre_et_description">
+                        <h2 class="titre_food">Parmentier de queue de boeuf</h2>
+                        <h3 class="description">À la truffe noire sur sa purée de panais</h3>
+                    </div>
+
+                    <div class="conteneur_prix">
+                        <h2>35€</h2>
+                    </div>
+                    <div class="green">
+                        <i class="fas fa-check-circle fa-2x"></i>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="conteneur_E_P_D">
+                <div class="conteneur_E_P_D_niveau_1">
+                    <div class="conteneur_titre_et_description">
+                        <h2 class="titre_food">Filet de turbot</h2>
+                        <h3 class="description">Aux agrumes</h3>
+                    </div>
+
+                    <div class="conteneur_prix">
+                        <h2>44€</h2>
+                    </div>
+                    <div class="green">
+                        <i class="fas fa-check-circle fa-2x"></i>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="conteneur_titre_ligne_verte">
+                <h3 class="titre_e_p_d">DESSERTS</h3>
+                <hr class="ligne_verte" />
+            </div>
+
+            <div class="conteneur_E_P_D">
+                <div class="conteneur_E_P_D_niveau_1">
+                    <div class="conteneur_titre_et_description">
+                        <h2 class="titre_food">Paris-Brest</h2>
+                        <h3 class="description">Revisité</h3>
+                    </div>
+
+                    <div class="conteneur_prix">
+                        <h2>18€</h2>
+                    </div>
+                    <div class="green">
+                        <i class="fas fa-check-circle fa-2x"></i>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="conteneur_E_P_D">
+                <div class="conteneur_E_P_D_niveau_1">
+                    <div class="conteneur_titre_et_description">
+                        <h2 class="titre_food">Macaron au chocolat d'exception</h2>
+                        <h3 class="description">Et glace à la vanille de Madagascar</h3>
+                    </div>
+
+                    <div class="conteneur_prix">
+                        <h2>22€</h2>
+                    </div>
+                    <div class="green">
+                        <i class="fas fa-check-circle fa-2x"></i>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="conteneur_E_P_D">
+                <div class="conteneur_E_P_D_niveau_1">
+                    <div class="conteneur_titre_et_description">
+                        <h2 class="titre_food">Mousse au chocolat</h2>
+                        <h3 class="description">Au piment d'Espelette et à la truffe noire</h3>
+                    </div>
+
+                    <div class="conteneur_prix">
+                        <h2>23€</h2>
+                    </div>
                     <div class="green">
                         <i class="fas fa-check-circle fa-2x"></i>
                     </div>
