--- a/restaurant_2.html
+++ b/restaurant_2.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet"
+        type='text/css'>
+    <link href="/your-path-to-fontawesome/css/fontawesome.css" rel="stylesheet">
+    <link href="/your-path-to-fontawesome/css/brands.css" rel="stylesheet">
+    <link href="/your-path-to-fontawesome/css/solid.css" rel="stylesheet"> -->
+    <script src="https://kit.fontawesome.com/c78fdf2e47.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <title>Ohmyfood</title>
 </head>
@@ -20,7 +27,7 @@
     </header>
 
     <section class="content">
-        <img src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="" class="photo_resto_menu">
+        <img src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="" class="photo_resto_menu">
 
 
         <div class="menu">
@@ -28,7 +35,7 @@
                 <div class="titre_icone main_titre_menu">
                     <div class="titre_lieu">
                         <a href="restaurant_1.html">
-                            <h2 class="titre note" id="main_titre_menu">La note enchantée</h2>
+                            <h2 class="titre palette" id="main_titre_menu">La palette du goût</h2>
                         </a>
                     </div>
 
@@ -50,148 +57,137 @@
                         </svg>
                     </div>
 
+
                 </div>
                 <div class="categories_food">
-                    <div class="entrees">
+                    <div class="entrees" id="entrees">
                         <h3>ENTRÉES</h3>
                         <hr />
                         <div class="button entree_element element_1">
                             <div class="titre_element">
-                                <h2>Ravioles de foie gras </h2>
-                                <h3>Accompagnés de leur crème à la truffe</h3>
+                                <h2>Fricassée d'escargot</h2>
+                                <h3>Au piment d'espelette</h3>
                             </div>
                             <div class="prix_element">
                                 <h3>25€</h3>
                             </div>
                             <div class="green">
-                                <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
+                                <i class="fas fa-check-circle fa-2x"></i>
                             </div>
 
 
                         </div>
                         <div class="button entree_element element_2">
                             <div class="titre_element">
-                                <h2>Caviar osciètre</h2>
-                                <h3>Sur blini à la farine de blé noir</h3>
+                                <h2>fois gras de canard mi-cuit</h2>
+                                <h3>et ses copeaux de truffe noire</h3>
                             </div>
                             <div class="prix_element">
                                 <h3>35€</h3>
                             </div>
                             <div class="green">
-                                <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
+                                <i class="fas fa-check-circle fa-2x"></i>
                             </div>
                         </div>
                         <div class="button entree_element element_3">
                             <div class="titre_element">
-                                <h2>Homard et espuma de potiron</h2>
-                                <h3>Mariné aux zestes d'orange</h3>
+                                <h2>Oeuf au plat</h2>
+                                <h3>Assaisonné à la truffe sur lit de caviar</h3>
                             </div>
                             <div class="prix_element">
                                 <h3>20€</h3>
                             </div>
                             <div class="green">
-                                <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
-                            </div>
-                        </div>
-
-                        <div class="button entree_element element_4">
-                            <div class="titre_element">
-                                <h2>Foie gras de canard cuit entier</h2>
-                                <h3>Confiture de figue et pain toasté</h3>
-                            </div>
-                            <div class="prix_element">
-                                <h3>35€</h3>
-                            </div>
-                            <div class="green">
-                                <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
+                                <i class="fas fa-check-circle fa-2x"></i>
                             </div>
                         </div>
                     </div>
-                    <div class="plats">
+                    <div class="plats" id="plats">
                         <h3>PLATS</h3>
                         <hr />
                         <div class="button plats_element  element_1">
                             <div class="titre_element">
-                                <h2>Noix de coquilles Saint-Jacques</h2>
-                                <h3>Sur lit de purée de céleri-rave</h3>
+                                <h2>Filet de boeuf aux herbes</h2>
+                                <h3>Accompagné de sa ribambelle de légumes</h3>
                             </div>
                             <div class="prix_element">
                                 <h3>40€</h3>
                             </div>
                             <div class="green">
-                                <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
+                                <i class="fas fa-check-circle fa-2x"></i>
                             </div>
 
 
                         </div>
-                        <div class=" button plats_element element_2">
+                        <div class="button plats_element element_2">
                             <div class="titre_element">
-                                <h2>Langoustine poêlée</h2>
-                                <h3>Purée de patate douce</h3>
+                                <h2>Parmentier de queue de boeuf</h2>
+                                <h3>À la truffe noire sur sa purée de panais</h3>
                             </div>
                             <div class="prix_element">
                                 <h3>35€</h3>
                             </div>
                             <div class="green">
-                                <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
+                                <i class="fas fa-check-circle fa-2x"></i>
                             </div>
                         </div>
                         <div class="button plats_element element_3">
                             <div class="titre_element">
-                                <h2>Mijoté de queue de boeuf </h2>
-                                <h3>Et riz sauvage aux zestes de citron</h3>
+                                <h2>Filet de turbot</h2>
+                                <h3>Aux agrumes</h3>
                             </div>
                             <div class="prix_element">
                                 <h3>44€</h3>
                             </div>
                             <div class="green">
-                                <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
+                                <i class="fas fa-check-circle fa-2x"></i>
                             </div>
                         </div>
                     </div>
-                    <div class="desserts">
+                    <div class="desserts" id="desserts">
                         <h3>DESSERTS</h3>
                         <hr />
                         <div class="button desserts_element  element_1">
                             <div class="titre_element">
-                                <h2>Macaron noisette et chocolat</h2>
-                                <h3>Glace au caramel brun et sel de Guérande</h3>
+                                <h2>Paris-Brest</h2>
+                                <h3>Revisité</h3>
                             </div>
                             <div class="prix_element">
                                 <h3>18€</h3>
                             </div>
                             <div class="green">
-                                <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
+                                <i class="fas fa-check-circle fa-2x"></i>
                             </div>
 
 
                         </div>
                         <div class="button desserts_element element_2">
                             <div class="titre_element">
-                                <h2>Baba au rhum revisité </h2>
-                                <h3>Avec son coulis de citron</h3>
+                                <h2> Macaron au chocolat d'exception </h2>
+                                <h3>Et glace à la vanille de Madagascar</h3>
                             </div>
                             <div class="prix_element">
                                 <h3>22€</h3>
                             </div>
                             <div class="green">
-                                <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
+                                <i class="fas fa-check-circle fa-2x"></i>
                             </div>
                         </div>
                         <div class="button desserts_element element_3">
                             <div class="titre_element">
-                                <h2>Tarte au citron meringuée </h2>
-                                <h3>Déstructurée</h3>
+                                <h2>Mousse au chocolat</h2>
+                                <h3>Au piment d'Espelette et à la truffe noire</h3>
                             </div>
                             <div class="prix_element">
                                 <h3>23€</h3>
                             </div>
                             <div class="green">
-                                <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
+                                <i class="fas fa-check-circle fa-2x"></i>
                             </div>
                         </div>
                     </div>
                 </div>
+
             </div>
             <div id="button_explore" class="button button_commander">
                 <a href="#">Commander</a>
@@ -200,6 +196,219 @@
 
 
     </section>
+
+    <!-- nouveau contenu en constructioun DEBUT -->
+    <section class="contenu">
+        <img src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="note enchantee photo">
+        <div class="menu_fond_gris">
+
+            <div class="conteneur_titre_coeur">
+                <h2 class="titre_principal_menu">La note enchantée</h2>
+                <div class="conteneur_coeur">
+                    <i class="far fa-heart fa-3x premier_coeur"></i>
+                    <i class="fas fa-heart fa-3x deuxieme_coeur"></i>
+                </div>
+            </div>
+
+            <div class="conteneur_titre_ligne_verte">
+                <h3 class="titre_e_p_d">ENTRÉES</h3>
+                <hr class="ligne_verte" />
+            </div>
+
+            <div class="conteneur_E_P_D">
+                <div class="conteneur_E_P_D_niveau_1">
+                    <div class="conteneur_titre_et_description">
+                        <h2 class="titre_food">Ravioles de foie gras</h2>
+                        <h3 class="description">Accompagnés de leur crème à la truffe</h3>
+                    </div>
+
+                    <div class="conteneur_prix">
+                        <h2>25€</h2>
+                    </div>
+                    <div class="green">
+                        <i class="fas fa-check-circle fa-2x"></i>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="conteneur_E_P_D">
+                <div class="conteneur_E_P_D_niveau_1">
+                    <div class="conteneur_titre_et_description">
+                        <h2 class="titre_food">Caviar osciètre</h2>
+                        <h3 class="description">Sur blini à la farine de blé noir</h3>
+                    </div>
+
+                    <div class="conteneur_prix">
+                        <h2>35€</h2>
+                    </div>
+
+                    <div class="green">
+                        <i class="fas fa-check-circle fa-2x"></i>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="conteneur_E_P_D">
+                <div class="conteneur_E_P_D_niveau_1">
+                    <div class="conteneur_titre_et_description">
+                        <h2 class="titre_food">Homard et espuma de potiron</h2>
+                        <h3 class="description">Mariné aux zestes d'orange</h3>
+                    </div>
+
+                    <div class="conteneur_prix">
+                        <h2>20€</h2>
+                    </div>
+
+                    <div class="green">
+                        <i class="fas fa-check-circle fa-2x"></i>
+                    </div>
+
+                </div>
+            </div>
+
+
+            <div class="conteneur_E_P_D">
+                <div class="conteneur_E_P_D_niveau_1">
+                    <div class="conteneur_titre_et_description">
+                        <h2 class="titre_food">Foie gras de canard cuit entier</h2>
+                        <h3 class="description">Confiture de figue et pain toasté</h3>
+                    </div>
+
+                    <div class="conteneur_prix">
+                        <h2>35€</h2>
+                    </div>
+
+                    <div class="green">
+                        <i class="fas fa-check-circle fa-2x"></i>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="conteneur_titre_ligne_verte">
+                <h3 class="titre_e_p_d">PLATS</h3>
+                <hr class="ligne_verte" />
+            </div>
+
+            <div class="conteneur_E_P_D">
+                <div class="conteneur_E_P_D_niveau_1">
+                    <div class="conteneur_titre_et_description">
+                        <h2 class="titre_food">Noix de coquilles Saint-Jacques</h2>
+                        <h3 class="description">Sur lit de purée de céleri-rave</h3>
+                    </div>
+
+                    <div class="conteneur_prix">
+                        <h2>40€</h2>
+                    </div>
+
+                    <div class="green">
+                        <i class="fas fa-check-circle fa-2x"></i>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="conteneur_E_P_D">
+                <div class="conteneur_E_P_D_niveau_1">
+                    <div class="conteneur_titre_et_description">
+                        <h2 class="titre_food">Langoustine poêlée</h2>
+                        <h3 class="description">Purée de patate douce</h3>
+                    </div>
+
+                    <div class="conteneur_prix">
+                        <h2>35€</h2>
+                    </div>
+                    <div class="green">
+                        <i class="fas fa-check-circle fa-2x"></i>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="conteneur_E_P_D">
+                <div class="conteneur_E_P_D_niveau_1">
+                    <div class="conteneur_titre_et_description">
+                        <h2 class="titre_food">Mijoté de queue de boeuf</h2>
+                        <h3 class="description">Et riz sauvage aux zestes de citron</h3>
+                    </div>
+
+                    <div class="conteneur_prix">
+                        <h2>44€</h2>
+                    </div>
+                    <div class="green">
+                        <i class="fas fa-check-circle fa-2x"></i>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="conteneur_titre_ligne_verte">
+                <h3 class="titre_e_p_d">DESSERTS</h3>
+                <hr class="ligne_verte" />
+            </div>
+
+            <div class="conteneur_E_P_D">
+                <div class="conteneur_E_P_D_niveau_1">
+                    <div class="conteneur_titre_et_description">
+                        <h2 class="titre_food">Macaron noisette et chocolat</h2>
+                        <h3 class="description">Glace au caramel brun et sel de Guérande</h3>
+                    </div>
+
+                    <div class="conteneur_prix">
+                        <h2>18€</h2>
+                    </div>
+                    <div class="green">
+                        <i class="fas fa-check-circle fa-2x"></i>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="conteneur_E_P_D">
+                <div class="conteneur_E_P_D_niveau_1">
+                    <div class="conteneur_titre_et_description">
+                        <h2 class="titre_food">Macaron au chocolat d'exception</h2>
+                        <h3 class="description">Et glace à la vanille de Madagascar</h3>
+                    </div>
+
+                    <div class="conteneur_prix">
+                        <h2>22€</h2>
+                    </div>
+                    <div class="green">
+                        <i class="fas fa-check-circle fa-2x"></i>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="conteneur_E_P_D">
+                <div class="conteneur_E_P_D_niveau_1">
+                    <div class="conteneur_titre_et_description">
+                        <h2 class="titre_food">Mousse au chocolat</h2>
+                        <h3 class="description">Au piment d'Espelette et à la truffe noire</h3>
+                    </div>
+
+                    <div class="conteneur_prix">
+                        <h2>23€</h2>
+                    </div>
+                    <div class="green">
+                        <i class="fas fa-check-circle fa-2x"></i>
+                    </div>
+
+                </div>
+            </div>
+
+            <div id="button_explore" class="button button_commander bouton_rose_menu">
+                <a href="#">Commander</a>
+            </div>
+
+        </div>
+    </section>
+
+    <!-- nouveau contenu en constructioun FIN -->
+
 
 
     <footer>
